--- a/Workshop.ipynb
+++ b/Workshop.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -268,110 +268,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2 3 2 2 2 1]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[0., 1., 0.],\n",
-       "       [0., 1., 1.],\n",
-       "       [0., 1., 0.],\n",
-       "       [0., 1., 0.],\n",
-       "       [0., 1., 0.],\n",
-       "       [0., 0., 1.]])"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Solution implemented with function to convert a number to binary from scratch.\n",
-    "import math\n",
-    "def num_to_binary(num, size):\n",
-    "    binary = []\n",
-    "    if num == 0:\n",
-    "        binary.append(0)\n",
-    "    else:\n",
-    "        while (num >0):\n",
-    "            remainder = num%2\n",
-    "            binary.append(remainder)\n",
-    "            num = math.floor(num/2)\n",
-    "    binary = binary[::-1]\n",
-    "    \n",
-    "    length_binary = len(binary)\n",
-    "    if length_binary < size:\n",
-    "        for i in range(size - length_binary):\n",
-    "            binary.insert(0,0)\n",
-    "        \n",
-    "    return(binary)\n",
-    "\n",
-    "def one_hot_encoding(array):\n",
-    "    output = []\n",
-    "    for num in array:\n",
-    "        binary = num_to_binary(num,3)\n",
-    "        binary = np.array([float(n) for n in binary])\n",
-    "        output.append(binary)\n",
-    "    return np.array(output)\n",
-    "\n",
-    "#Test\n",
-    "np.random.seed(101) \n",
-    "arr = np.random.randint(1,4, size=6)\n",
-    "print(arr)\n",
-    "one_hot_encoding(arr)"
+    "def ohe(arr):\n",
+    "    length = len(arr)\n",
+    "    max_num = np.max(arr)\n",
+    "    output = np.full((length,max_num),0)\n",
+    "    for i, num in enumerate(arr):\n",
+    "        output[i,num-1] = 1\n",
+    "    return output\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2 3 2 2 2 1]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "array([[0., 1., 0.],\n",
-       "       [0., 1., 1.],\n",
-       "       [0., 1., 0.],\n",
-       "       [0., 1., 0.],\n",
-       "       [0., 1., 0.],\n",
-       "       [0., 0., 1.]])"
+       "array([[0, 1, 0],\n",
+       "       [0, 0, 1],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [1, 0, 0]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Solution implemented with function to convert a number to binary from numpy. \n",
-    "\n",
-    "def one_hot_encoding(array):\n",
-    "    output = []\n",
-    "    for num in array:\n",
-    "        binary = np.binary_repr(num, width = 3)\n",
-    "        binary = np.array([float(n) for n in binary])\n",
-    "        output.append(binary)\n",
-    "    return np.array(output)\n",
-    "\n",
     "#Test\n",
-    "print(arr)\n",
-    "one_hot_encoding(arr)\n"
+    "np.random.seed(101) \n",
+    "array = np.random.randint(1,4, size=6)\n",
+    "ohe(array)"
    ]
   },
   {
@@ -429,16 +364,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0., 0., 0., 1., 1., 1., 1., 1., 1., 1.])"
+       "array([1., 0., 1., 0., 1., 1., 1., 1., 1., 0.])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +433,7 @@
        "[2, 5]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +464,7 @@
        "array([2, 5], dtype=int64)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
