--- a/Workshop.ipynb
+++ b/Workshop.ipynb
@@ -454,48 +454,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Array = [2 3 2 2 2 1]\n"
+      "[2 3 2 2 2 1]\n[[0. 1. 0.]\n [0. 0. 1.]\n [0. 1. 0.]\n [0. 1. 0.]\n [0. 1. 0.]\n [1. 0. 0.]]\n\n [2 5 8 3 5 8]\n[[1. 0. 0. 0.]\n [0. 0. 1. 0.]\n [0. 0. 0. 1.]\n [0. 1. 0. 0.]\n [0. 0. 1. 0.]\n [0. 0. 0. 1.]]\n"
      ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array([[0., 1., 0.],\n",
-       "       [0., 0., 1.],\n",
-       "       [0., 1., 0.],\n",
-       "       [0., 1., 0.],\n",
-       "       [0., 1., 0.],\n",
-       "       [1., 0., 0.]])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 35
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
+    "def one_hot(arr):\n",
+    "    \"\"\"\n",
+    "    Create a one-hot matrix\n",
+    "    based on the unique values\n",
+    "    in a given array.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # get only unique values in set\n",
+    "    uniq = sorted(set(arr))\n",
+    "    \n",
+    "    # initialize the results array with only zeros.\n",
+    "    res = np.zeros((len(arr), len(uniq)))\n",
+    "    \n",
+    "    # for the very general case, map\n",
+    "    # these unique values to an array\n",
+    "    # of continuous index values\n",
+    "    # (see second example below)\n",
+    "    dict_map ={x:y\n",
+    "               for x, y in zip(list(uniq), range(len(uniq)))}\n",
+    "    arr_index = [dict_map[x] for x in arr]\n",
+    "        \n",
+    "    # use fancy indexing to set correct values\n",
+    "    # i.e.   res[0, arr_index[0]] = 1\n",
+    "    #        res[1, arr_index[1]] = 1\n",
+    "    #        res[2, arr_index[2]] = 1 ... and so on.\n",
+    "    res[np.array(range(len(arr))), arr_index] = 1\n",
+    "    \n",
+    "    return res\n",
+    "\n",
+    "\n",
     "# repeat the code given\n",
+    "# for the example\n",
     "np.random.seed(101)\n",
     "arr = np.random.randint(1, 4, size=6)\n",
-    "print(f\"Array = {arr}\")\n",
-    "\n",
-    "# initialize the results array with only zeros.\n",
-    "res = np.zeros((len(arr), 3))\n",
-    "# use fancy indexing to set correct values\n",
-    "# i.e.   res[0, 2-1] = 1\n",
-    "#        res[1, 3-1] = 1\n",
-    "#        res[2, 2-1] = 1 ... and so on.\n",
-    "res[np.array(list(range(len(arr)))), arr-1] = 1\n",
-    "res"
+    "result = one_hot(arr)\n",
+    "print(arr)\n",
+    "print(result)\n",
+    "# second example\n",
+    "arr = np.array([2, 5, 8, 3, 5, 8])\n",
+    "result = one_hot(arr)\n",
+    "print(f\"\\n {arr}\")\n",
+    "print(result)"
    ]
   },
   {
