--- a/02_Data Types & numpy.ipynb
+++ b/02_Data Types & numpy.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,8 +153,8 @@
     }
    ],
    "source": [
-    "l = [str(c) for c in range(10)]\n",
-    "l[0 : 3] = [int(x) for x in l[0 : 3]]\n",
+    "l = [str(c) for c in range(10)]#produces all strings of numbers\n",
+    "l[0 : 3] = [int(x) for x in l[0 : 3]]# produces 0,1,2 as normal numbers and strings for the rest\n",
     "l"
    ]
   },
@@ -248,7 +248,7 @@
     "\n",
     "# integer array:\n",
     "a = np.array([1, 4, 2, 5, 3])\n",
-    "print(a.dtype)\n",
+    "print(a.dtype)#dtype = data type (int 64 in this case)\n",
     "a"
    ]
   },
@@ -387,6 +387,7 @@
    ],
    "source": [
     "# nested lists are multi-dimensional arrays\n",
+    "#MAKES MATRIX***\n",
     "np.array([[2,3,4], [6,7,8], [9, 10, 11]])"
    ]
   },
@@ -471,7 +472,7 @@
    ],
    "source": [
     "# Create a 3x5 floating-point array filled with ones\n",
-    "np.ones((3, 5), dtype=float)"
+    "np.ones((3, 5), dtype=float)#creates matrix with 3 rows by 5 columns"
    ]
   },
   {
@@ -558,7 +559,7 @@
     }
    ],
    "source": [
-    "np.empty(10, dtype=np.int64)"
+    "np.empty(10, dtype=np.int64)#creates array but doesn't initialize memory"
    ]
   },
   {
@@ -645,7 +646,7 @@
     "    [1, 6, 7, 7]]\n",
     ")\n",
     "# We index (row, column)\n",
-    "x[0, 0]"
+    "x[0, 0]# first column, first row"
    ]
   },
   {
@@ -665,7 +666,7 @@
     }
    ],
    "source": [
-    "x[2, -1]"
+    "x[2, -1]#last column, last row"
    ]
   },
   {
@@ -929,7 +930,7 @@
     }
    ],
    "source": [
-    "x_sub = x[:2, :2]\n",
+    "x_sub = x[:2, :2]#first 2 rows, first 2 columns\n",
     "x_sub"
    ]
   },
@@ -1109,14 +1110,14 @@
     "                 [6, 5, 4]])\n",
     "\n",
     "# vertically stack the arrays\n",
-    "np.vstack([x, grid])\n",
+    "np.vstack([x, grid])#presents array vertically\n",
     "\n",
     "\n",
     "\n",
     "# horizontally stack the arrays\n",
     "y = np.array([[99],\n",
     "              [99]])\n",
-    "np.hstack([grid, y])"
+    "np.hstack([grid, y])#presents array horizontally"
    ]
   },
   {
@@ -1141,9 +1142,13 @@
  "metadata": {
   "file_extension": ".py",
   "kernelspec": {
-   "display_name": "Python 3.7.7 64-bit ('icbs': conda)",
-   "language": "python",
-   "name": "python37764biticbscondaf4d657c25dbb416bac6851c38201b968"
+   "name": "Python 3.8.3 64-bit ('base': conda)",
+   "display_name": "Python 3.8.3 64-bit ('base': conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "10e649b61f97aff8a59b4bb4b7658270e6fc4ef07a5bdf34bc098640d11ed8f5"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -1155,7 +1160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3-final"
   },
   "mimetype": "text/x-python",
   "name": "python",
