--- a/03_numpy computation.ipynb
+++ b/03_numpy computation.ipynb
@@ -43,7 +43,8 @@
     "    for i in range(len(values)):\n",
     "        output[i] = 1.0 / values[i]\n",
     "    return output\n",
-    "        \n",
+    "\n",
+    " #try to write more like belowe from now on       \n",
     "values = np.random.randint(1, 10, size=5)\n",
     "compute_reciprocals(values)"
    ]
@@ -208,7 +209,7 @@
     }
    ],
    "source": [
-    "a.shape = (2, 2)\n",
+    "a.shape = (2, 2)#forces shape to be a 2 x 2 matrix\n",
     "a"
    ]
   },
@@ -276,9 +277,9 @@
     }
    ],
    "source": [
-    "z = np.linspace(2, 4, 50)\n",
+    "z = np.linspace(2, 4, 50) #linearly spaced numbers from 2-4 over 50 numbers\n",
     "print(z)\n",
-    "z.searchsorted(2.2)"
+    "z.searchsorted(2.2)#gives index where 2.2 is"
    ]
   },
   {
@@ -386,7 +387,7 @@
     }
    ],
    "source": [
-    "np.multiply.outer(x, x)"
+    "np.multiply.outer(x, x) # makes cartesian map"
    ]
   },
   {
@@ -493,7 +494,8 @@
    "source": [
     "z = np.array([2, 3])\n",
     "y = np.array([2, 5])\n",
-    "z == y"
+    "z == y # returns boolean if vectors are same (2 = 2, 3 != 5)\n",
+    "#crashes if matrices aren't same size"
    ]
   },
   {
