Kaleb McK Numpy 6 Workshop

--- a/Workshop.ipynb
+++ b/Workshop.ipynb
@@ -17,6 +17,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "179.73809523809524\n6.931843442745892\n193\n163\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "import numpy as np \n",
+    "\n",
+    "df = pd.read_csv('/Users/kalebmckenzie/Documents/GitHub/m1-6-numpy/data/president_heights.csv', index_col=0)\n",
+    "\n",
+    "p_a = df[['height(cm)']].values\n",
+    "\n",
+    "print(p_a.mean())\n",
+    "print(p_a.std())\n",
+    "\n",
+    "Tallest = np.max(p_a)\n",
+    "Smallest = np.min(p_a)\n",
+    "print(Tallest)\n",
+    "print(Smallest)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -38,6 +69,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "32"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\"\"\"\n",
+    "In poly_func, left side numbers are coeffs, \n",
+    "while the ones of the right are represented x values.\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "poly_func = np.array([[2,1,1],[1,5,5**2]])\n",
+    "\n",
+    "\"\"\"\n",
+    "Using np.cumprod() multiplying the 0 axis or \n",
+    "the coeffs to the respective x would be values\n",
+    "\"\"\"\n",
+    "\n",
+    "compute_poly = np.cumprod(poly_func, axis=0)\n",
+    "\"\"\"\n",
+    "Deleting the top row in order to get the proper sum\n",
+    "\"\"\"\n",
+    "\n",
+    "res = np.delete(compute_poly, (0), axis=0)\n",
+    "\n",
+    "res.sum()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -48,6 +125,82 @@
     "\n",
     "\n",
     "Your result should be equal to the output of `scipy.special.softmax`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0.00221959 0.00181724 0.00148783 0.00134625 0.00200836 0.00299613\n 0.00134625 0.00200836 0.00110221 0.00181724 0.00299613 0.00164431\n 0.00164431 0.00099732 0.0044697  0.00404435 0.00299613 0.00221959\n 0.00404435 0.00221959 0.00299613 0.00221959 0.00134625 0.00221959\n 0.00164431 0.00200836 0.00200836 0.00245302 0.00245302 0.00148783\n 0.00164431 0.00299613 0.00245302 0.00331123 0.00181724 0.00200836\n 0.00331123 0.00181724 0.00110221 0.00221959 0.00200836 0.00121813\n 0.00110221 0.00200836 0.00221959 0.00164431 0.00221959 0.00134625\n 0.00271101 0.00200836 0.01483991 0.00814432 0.01342771 0.00331123\n 0.00900086 0.00404435 0.00736928 0.00181724 0.00994749 0.00245302\n 0.00200836 0.00493978 0.0054593  0.00603346 0.00365948 0.01099368\n 0.00365948 0.0044697  0.006668   0.00365948 0.00493978 0.00603346\n 0.00736928 0.00603346 0.00814432 0.00994749 0.01214989 0.01099368\n 0.0054593  0.00404435 0.00331123 0.00331123 0.0044697  0.0054593\n 0.00299613 0.0054593  0.01099368 0.00736928 0.00365948 0.00331123\n 0.00331123 0.00603346 0.0044697  0.00200836 0.00365948 0.00404435\n 0.00404435 0.006668   0.00221959 0.00404435 0.00736928 0.0044697\n 0.01640064 0.00736928 0.00900086 0.02704008 0.00181724 0.02003179\n 0.01099368 0.01812551 0.00900086 0.00814432 0.01214989 0.00404435\n 0.0044697  0.00814432 0.00900086 0.02988391 0.02988391 0.0054593\n 0.01342771 0.00365948 0.02988391 0.00736928 0.01099368 0.01812551\n 0.006668   0.00603346 0.00814432 0.01812551 0.02213855 0.0365003\n 0.00814432 0.00736928 0.00603346 0.02988391 0.00736928 0.00814432\n 0.0054593  0.01342771 0.01099368 0.01342771 0.0044697  0.01214989\n 0.01099368 0.01099368 0.00736928 0.00900086 0.006668   0.00493978]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df2 = pd.read_csv('data/iris.csv')\n",
+    "sepal = df2['sepallength']\n",
+    "sepal_n = sepal.to_numpy()\n",
+    "\n",
+    "def soft(sepal_n):\n",
+    "    return np.exp(sepal_n) / sum(np.exp(sepal_n))\n",
+    "print(soft(sepal_n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([0.00221959, 0.00181724, 0.00148783, 0.00134625, 0.00200836,\n",
+       "       0.00299613, 0.00134625, 0.00200836, 0.00110221, 0.00181724,\n",
+       "       0.00299613, 0.00164431, 0.00164431, 0.00099732, 0.0044697 ,\n",
+       "       0.00404435, 0.00299613, 0.00221959, 0.00404435, 0.00221959,\n",
+       "       0.00299613, 0.00221959, 0.00134625, 0.00221959, 0.00164431,\n",
+       "       0.00200836, 0.00200836, 0.00245302, 0.00245302, 0.00148783,\n",
+       "       0.00164431, 0.00299613, 0.00245302, 0.00331123, 0.00181724,\n",
+       "       0.00200836, 0.00331123, 0.00181724, 0.00110221, 0.00221959,\n",
+       "       0.00200836, 0.00121813, 0.00110221, 0.00200836, 0.00221959,\n",
+       "       0.00164431, 0.00221959, 0.00134625, 0.00271101, 0.00200836,\n",
+       "       0.01483991, 0.00814432, 0.01342771, 0.00331123, 0.00900086,\n",
+       "       0.00404435, 0.00736928, 0.00181724, 0.00994749, 0.00245302,\n",
+       "       0.00200836, 0.00493978, 0.0054593 , 0.00603346, 0.00365948,\n",
+       "       0.01099368, 0.00365948, 0.0044697 , 0.006668  , 0.00365948,\n",
+       "       0.00493978, 0.00603346, 0.00736928, 0.00603346, 0.00814432,\n",
+       "       0.00994749, 0.01214989, 0.01099368, 0.0054593 , 0.00404435,\n",
+       "       0.00331123, 0.00331123, 0.0044697 , 0.0054593 , 0.00299613,\n",
+       "       0.0054593 , 0.01099368, 0.00736928, 0.00365948, 0.00331123,\n",
+       "       0.00331123, 0.00603346, 0.0044697 , 0.00200836, 0.00365948,\n",
+       "       0.00404435, 0.00404435, 0.006668  , 0.00221959, 0.00404435,\n",
+       "       0.00736928, 0.0044697 , 0.01640064, 0.00736928, 0.00900086,\n",
+       "       0.02704008, 0.00181724, 0.02003179, 0.01099368, 0.01812551,\n",
+       "       0.00900086, 0.00814432, 0.01214989, 0.00404435, 0.0044697 ,\n",
+       "       0.00814432, 0.00900086, 0.02988391, 0.02988391, 0.0054593 ,\n",
+       "       0.01342771, 0.00365948, 0.02988391, 0.00736928, 0.01099368,\n",
+       "       0.01812551, 0.006668  , 0.00603346, 0.00814432, 0.01812551,\n",
+       "       0.02213855, 0.0365003 , 0.00814432, 0.00736928, 0.00603346,\n",
+       "       0.02988391, 0.00736928, 0.00814432, 0.0054593 , 0.01342771,\n",
+       "       0.01099368, 0.01342771, 0.0044697 , 0.01214989, 0.01099368,\n",
+       "       0.01099368, 0.00736928, 0.00900086, 0.006668  , 0.00493978])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 36
+    }
+   ],
+   "source": [
+    "# checking with scipy special\n",
+    "\n",
+    "from scipy.special import softmax\n",
+    "m = softmax(sepal_n)\n",
+    "m"
    ]
   },
   {
@@ -85,6 +238,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[2, 0, 1, 2, 0, 1, 1, 2, 1, 0],\n",
+       "       [3, 0, 1, 2, 1, 1, 0, 1, 1, 0],\n",
+       "       [3, 3, 1, 2, 0, 0, 0, 1, 0, 0],\n",
+       "       [2, 0, 1, 2, 2, 0, 1, 0, 1, 1],\n",
+       "       [2, 2, 1, 1, 2, 0, 1, 0, 1, 0],\n",
+       "       [2, 1, 2, 1, 1, 0, 1, 0, 1, 1]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.random.seed(100)\n",
+    "arr = np.random.randint(1,11,size=(6,10))\n",
+    "\n",
+    "\n",
+    "def count_unique(arr):\n",
+    "    weight = 1j*np.linspace(0, arr.shape[1], arr.shape[0], endpoint=False)\n",
+    "    b = arr + weight[:, np.newaxis]\n",
+    "    u, ind, cnt = np.unique(b, return_index=True, return_counts=True)\n",
+    "    b = np.zeros_like(arr)\n",
+    "    np.put(b, ind, cnt)\n",
+    "    return b\n",
+    "count_unique(arr)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -108,6 +301,41 @@
     "#>        [ 0.,  1.,  0.],\n",
     "#>        [ 1.,  0.,  0.]])\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[0., 1., 0.],\n",
+       "       [0., 0., 1.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [1., 0., 0.]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 45
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(101) \n",
+    "arr = np.random.randint(0,3, size=6)\n",
+    "\n",
+    "\n",
+    "def one_hot(arr):\n",
+    "    num_classes = np.max(arr) + 1\n",
+    "    result = np.eye(num_classes)[arr]\n",
+    "    return result\n",
+    "one_hot(arr)"
    ]
   },
   {
@@ -161,6 +389,42 @@
     "\n",
     "\n",
     "If you can, write the method so that `draw(k)` returns `k` draws from `q`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([1])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
+   "source": [
+    "import numpy as np \n",
+    "from numpy import cumsum \n",
+    "from numpy.random import uniform \n",
+    "\n",
+    "class DiscreteRV:\n",
+    "\n",
+    "    def __init__(self, q):\n",
+    "        self.q = q\n",
+    "        self.q_t = cumsum(q)\n",
+    "\n",
+    "    def draw(self, k=1):\n",
+    "        return self.q_t.searchsorted(uniform(0,1, size=k))\n",
+    "q = (0.1, 0.9)\n",
+    "d = DiscreteRV(q)\n",
+    "d.draw()\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -233,7 +497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4-final"
+   "version": "3.7.6-final"
   },
   "next_doc": {
    "link": "matplotlib",
