--- a/Workshop.ipynb
+++ b/Workshop.ipynb
@@ -346,7 +346,9 @@
    "source": [
     "\"\"\"\n",
     "Givent that the web has several ways of implementing this algorithm\n",
-    "in practice, I went with the one here as it seemed the simplest\n",
+    "in practice, I went with the one here as it seemed the simplest and since\n",
+    "I didn't quite understand the concept at first or how to\n",
+    "generate \"[0,1].\" values.\n",
     "\n",
     "https://stackoverflow.com/a/28663910/7183483\n",
     "\n",
@@ -415,6 +417,105 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "q = [0.32550555 0.63937228 0.76249495 0.85869799 0.85887894 0.92027329\n",
+      " 0.9878375  0.99725703 0.99924164 0.99969571]\n",
+      "[3 3 3]\n",
+      "[5 0 5 1 3 1 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import random\n",
+    "from random import uniform\n",
+    "\n",
+    "\"\"\"\n",
+    "We assume this is not a uniform distribution\n",
+    "\n",
+    "\"\"\"\n",
+    "class DiscreteRV:\n",
+    "    \n",
+    "    __skip = True\n",
+    "        \n",
+    "    __last_q_i = 0\n",
+    "    \n",
+    "    q = []\n",
+    "    \n",
+    "    _n = 0\n",
+    "    \n",
+    "    def __init__(self, n):\n",
+    "        self.build(n)\n",
+    "        \n",
+    "    \"\"\"\n",
+    "    Convenience method\n",
+    "    \"\"\"\n",
+    "    def build(self, n):\n",
+    "        if n < 1:\n",
+    "            self.q = []\n",
+    "            self._n = 0\n",
+    "        else:\n",
+    "            self._n = n\n",
+    "            self.q = np.fromfunction(np.vectorize(self.doLambda), (1, n), dtype=float)[0]\n",
+    "        self.__last_q_i = 0\n",
+    "        self.__skip = True\n",
+    "    \n",
+    "\n",
+    "    def doLambda(self, i, j):\n",
+    "        \"\"\"We use a first-iteration guard here to skip over np.vectorize's \n",
+    "        first iteration (see print bellow to see what I mean)\"\"\"\n",
+    "        if self.__skip:\n",
+    "            self.__skip = False\n",
+    "            return i\n",
+    "        \"\"\"\n",
+    "        We update the new sub-interval's max with a random value between\n",
+    "        the max of the former sub-interval and 1\n",
+    "        \"\"\"\n",
+    "        self.__last_q_i = uniform(self.__last_q_i, 1)\n",
+    "        return self.__last_q_i\n",
+    "\n",
+    "    def show(self):\n",
+    "        print(\"q = {a}\".format(a=self.q))\n",
+    "        \n",
+    "    \"\"\"\n",
+    "    Default to 1 draw\n",
+    "    \"\"\"\n",
+    "    def draw(self, k=1):\n",
+    "        draws_i = random.sample(range(0, len(self.q) - 1), k)\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        Check generates a random value x inc. in [0, 1] and returns it's\n",
+    "        index value with searchsorted applied to q\n",
+    "        \"\"\"\n",
+    "        def check(i,j): return np.searchsorted(self.q, uniform(0, 1))\n",
+    "        \n",
+    "        return np.fromfunction(np.vectorize(check), (1, len(draws_i)), dtype=int)[0]\n",
+    "        \n",
+    "        \n",
+    "dist = DiscreteRV(10)\n",
+    "\n",
+    "dist.show()\n",
+    "\n",
+    "print(dist.draw(3))\n",
+    "print(dist.draw(7))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -439,17 +540,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 5]"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def peaks_loop(a):\n",
+    "    p = []\n",
+    "    if len(a) == 3: return [1] if a[0] < a[1] > a[2] else []\n",
+    "    if len(a) < 3: return []\n",
+    "    \"\"\"\n",
+    "    No need to check elements on both ends of the array\n",
+    "    \"\"\"\n",
+    "    for i in range(1, len(a) - 2): \n",
+    "        if a[i - 1] < a[i] > a[i + 1]: p.append(i)\n",
+    "    return p\n",
+    "\n",
+    "peaks_loop([1, 3, 7, 1, 2, 6, 0, 1])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<numpy.ndenumerate object at 0x112b359d0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "def peaks_np(a):\n",
+    "    if len(a) == 3: return [1] if a[0] < a[1] > a[2] else []\n",
+    "    if len(a) < 3: return []\n",
+    "#     A = np.fromfunction(np.vectorize(lambda i, j: a[j] if i == j else 0), (len(a), len(a)), dtype=int)\n",
+    "    print(np.ndenumerate(a))\n",
+    "    \n",
+    "    \n",
+    "peaks_np([1, 3, 7, 1, 2, 6, 0, 1])"
+   ]
   },
   {
    "cell_type": "code",
