--- a/Workshop.ipynb
+++ b/Workshop.ipynb
@@ -310,10 +310,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[2, 5]\n[[5]]\n"
+     ]
+    }
+   ],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "#1. Solve this usign a regular python for loop\n",
     "\n",
     "def Peaks(a):\n",
@@ -333,7 +343,7 @@
     "        if ind == len(a):\n",
     "            if a[ind] >= a[ind-1]:\n",
     "                peaky_points.append(ind)\n",
-    "        print(peaky_points)\n",
+    "    print(peaky_points)\n",
     "\n",
     "a = np.array([1, 3, 7, 1, 2, 6, 0, 1])\n",
     "\n",
@@ -342,12 +352,20 @@
     "#2. Solve this using no loops and only numpy functions\n",
     "\n",
     "one_side = np.where(a[1:] < a[:-1], 1, 0)\n",
-    "two_side = np.where(a[1:] < a[:+1], 1, 0)\n",
+    "two_side = np.where(a[1:] < a[:1], 1, 0)\n",
     "\n",
     "peaks_are_2s = np.add(one_side, two_side)\n",
     "\n",
-    "np.argwhere(peaks_are_2s)"
+    "#I don't know why this won't work.\n",
+    "print(np.argwhere(peaks_are_2s == 2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
