--- a/Workshop.ipynb
+++ b/Workshop.ipynb
@@ -261,23 +261,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
+   "execution_count": 474,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array([[0., 1., 0.],\n",
-       "       [0., 0., 1.],\n",
-       "       [0., 1., 0.],\n",
-       "       [0., 1., 0.],\n",
-       "       [0., 1., 0.],\n",
-       "       [1., 0., 0.]])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 469
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[0. 1. 0.]\n [0. 0. 1.]\n [0. 1. 0.]\n [0. 1. 0.]\n [0. 1. 0.]\n [1. 0. 0.]]\n"
+     ]
     }
    ],
    "source": [
@@ -293,7 +285,7 @@
     "for i in range(np.shape(arr)[0]):\n",
     "    result[i,:]=arr[i]==a\n",
     "\n",
-    "result"
+    "print(result)"
    ]
   },
   {
@@ -505,7 +497,10 @@
     "\n",
     "plt.legend(loc='best')\n",
     "\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "\n"
    ],
    "cell_type": "code",
    "metadata": {},
