Gaya Kathiresu Numpy Workshop Submission

--- a/Workshop.ipynb
+++ b/Workshop.ipynb
@@ -17,6 +17,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean height :  179.73809523809524\n",
+      "The standard deviation :  6.931843442745893\n",
+      "The shortest president :  James Madison\n",
+      "The tallest president :  Abraham Lincoln\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('data/president_heights.csv')\n",
+    "\n",
+    "# create an array\n",
+    "arr = np.array(df)\n",
+    "\n",
+    "# mean height\n",
+    "print(\"The mean height : \", (arr[:,2].mean()))\n",
+    "\n",
+    "# standard deviation of height\n",
+    "print(\"The standard deviation : \", arr[:,2].std())\n",
+    "\n",
+    "# the president who is the shortest and tallest\n",
+    "print(\"The shortest president : \", arr[arr[:,2].argmin(),1])\n",
+    "print(\"The tallest president : \",arr[arr[:,2].argmax(),1])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -38,6 +74,56 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def p(x,coeff):\n",
+    "    return np.cumsum(np.array(coeff)*(np.array(x)**range(len(np.array(coeff)))))[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p([5],[1,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p([5],[2,1,1])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -48,6 +134,112 @@
     "\n",
     "\n",
     "Your result should be equal to the output of `scipy.special.softmax`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00221959, 0.00181724, 0.00148783, 0.00134625, 0.00200836,\n",
+       "       0.00299613, 0.00134625, 0.00200836, 0.00110221, 0.00181724,\n",
+       "       0.00299613, 0.00164431, 0.00164431, 0.00099732, 0.0044697 ,\n",
+       "       0.00404435, 0.00299613, 0.00221959, 0.00404435, 0.00221959,\n",
+       "       0.00299613, 0.00221959, 0.00134625, 0.00221959, 0.00164431,\n",
+       "       0.00200836, 0.00200836, 0.00245302, 0.00245302, 0.00148783,\n",
+       "       0.00164431, 0.00299613, 0.00245302, 0.00331123, 0.00181724,\n",
+       "       0.00200836, 0.00331123, 0.00181724, 0.00110221, 0.00221959,\n",
+       "       0.00200836, 0.00121813, 0.00110221, 0.00200836, 0.00221959,\n",
+       "       0.00164431, 0.00221959, 0.00134625, 0.00271101, 0.00200836,\n",
+       "       0.01483991, 0.00814432, 0.01342771, 0.00331123, 0.00900086,\n",
+       "       0.00404435, 0.00736928, 0.00181724, 0.00994749, 0.00245302,\n",
+       "       0.00200836, 0.00493978, 0.0054593 , 0.00603346, 0.00365948,\n",
+       "       0.01099368, 0.00365948, 0.0044697 , 0.006668  , 0.00365948,\n",
+       "       0.00493978, 0.00603346, 0.00736928, 0.00603346, 0.00814432,\n",
+       "       0.00994749, 0.01214989, 0.01099368, 0.0054593 , 0.00404435,\n",
+       "       0.00331123, 0.00331123, 0.0044697 , 0.0054593 , 0.00299613,\n",
+       "       0.0054593 , 0.01099368, 0.00736928, 0.00365948, 0.00331123,\n",
+       "       0.00331123, 0.00603346, 0.0044697 , 0.00200836, 0.00365948,\n",
+       "       0.00404435, 0.00404435, 0.006668  , 0.00221959, 0.00404435,\n",
+       "       0.00736928, 0.0044697 , 0.01640064, 0.00736928, 0.00900086,\n",
+       "       0.02704008, 0.00181724, 0.02003179, 0.01099368, 0.01812551,\n",
+       "       0.00900086, 0.00814432, 0.01214989, 0.00404435, 0.0044697 ,\n",
+       "       0.00814432, 0.00900086, 0.02988391, 0.02988391, 0.0054593 ,\n",
+       "       0.01342771, 0.00365948, 0.02988391, 0.00736928, 0.01099368,\n",
+       "       0.01812551, 0.006668  , 0.00603346, 0.00814432, 0.01812551,\n",
+       "       0.02213855, 0.0365003 , 0.00814432, 0.00736928, 0.00603346,\n",
+       "       0.02988391, 0.00736928, 0.00814432, 0.0054593 , 0.01342771,\n",
+       "       0.01099368, 0.01342771, 0.0044697 , 0.01214989, 0.01099368,\n",
+       "       0.01099368, 0.00736928, 0.00900086, 0.006668  , 0.00493978])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('data/iris.csv')\n",
+    "\n",
+    "#create an array\n",
+    "arr = np.array(df)\n",
+    "\n",
+    "sepall = np.array(arr[:,0],dtype=float)\n",
+    "np.exp(sepall) / np.sum(np.exp(sepall))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00221959, 0.00181724, 0.00148783, 0.00134625, 0.00200836,\n",
+       "       0.00299613, 0.00134625, 0.00200836, 0.00110221, 0.00181724,\n",
+       "       0.00299613, 0.00164431, 0.00164431, 0.00099732, 0.0044697 ,\n",
+       "       0.00404435, 0.00299613, 0.00221959, 0.00404435, 0.00221959,\n",
+       "       0.00299613, 0.00221959, 0.00134625, 0.00221959, 0.00164431,\n",
+       "       0.00200836, 0.00200836, 0.00245302, 0.00245302, 0.00148783,\n",
+       "       0.00164431, 0.00299613, 0.00245302, 0.00331123, 0.00181724,\n",
+       "       0.00200836, 0.00331123, 0.00181724, 0.00110221, 0.00221959,\n",
+       "       0.00200836, 0.00121813, 0.00110221, 0.00200836, 0.00221959,\n",
+       "       0.00164431, 0.00221959, 0.00134625, 0.00271101, 0.00200836,\n",
+       "       0.01483991, 0.00814432, 0.01342771, 0.00331123, 0.00900086,\n",
+       "       0.00404435, 0.00736928, 0.00181724, 0.00994749, 0.00245302,\n",
+       "       0.00200836, 0.00493978, 0.0054593 , 0.00603346, 0.00365948,\n",
+       "       0.01099368, 0.00365948, 0.0044697 , 0.006668  , 0.00365948,\n",
+       "       0.00493978, 0.00603346, 0.00736928, 0.00603346, 0.00814432,\n",
+       "       0.00994749, 0.01214989, 0.01099368, 0.0054593 , 0.00404435,\n",
+       "       0.00331123, 0.00331123, 0.0044697 , 0.0054593 , 0.00299613,\n",
+       "       0.0054593 , 0.01099368, 0.00736928, 0.00365948, 0.00331123,\n",
+       "       0.00331123, 0.00603346, 0.0044697 , 0.00200836, 0.00365948,\n",
+       "       0.00404435, 0.00404435, 0.006668  , 0.00221959, 0.00404435,\n",
+       "       0.00736928, 0.0044697 , 0.01640064, 0.00736928, 0.00900086,\n",
+       "       0.02704008, 0.00181724, 0.02003179, 0.01099368, 0.01812551,\n",
+       "       0.00900086, 0.00814432, 0.01214989, 0.00404435, 0.0044697 ,\n",
+       "       0.00814432, 0.00900086, 0.02988391, 0.02988391, 0.0054593 ,\n",
+       "       0.01342771, 0.00365948, 0.02988391, 0.00736928, 0.01099368,\n",
+       "       0.01812551, 0.006668  , 0.00603346, 0.00814432, 0.01812551,\n",
+       "       0.02213855, 0.0365003 , 0.00814432, 0.00736928, 0.00603346,\n",
+       "       0.02988391, 0.00736928, 0.00814432, 0.0054593 , 0.01342771,\n",
+       "       0.01099368, 0.01342771, 0.0044697 , 0.01214989, 0.01099368,\n",
+       "       0.01099368, 0.00736928, 0.00900086, 0.006668  , 0.00493978])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#verification\n",
+    "from scipy.special import softmax\n",
+    "softmax(sepall)"
    ]
   },
   {
@@ -85,6 +277,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 0 2 1 1 1 0 2 2 0]\n",
+      " [2 1 3 0 1 0 1 0 1 1]\n",
+      " [0 3 0 2 3 1 0 1 0 0]\n",
+      " [1 0 2 1 0 1 0 2 1 2]\n",
+      " [2 2 2 0 0 1 1 1 1 0]\n",
+      " [1 1 1 1 1 2 0 0 2 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ref: https://note.nkmk.me/en/python-numpy-count/\n",
+    "np.random.seed(100)\n",
+    "arr = np.random.randint(1,11,size=(6, 10))\n",
+    "output_arr = np.zeros((6,10),dtype=int)\n",
+    "\n",
+    "for r in range(arr.shape[0]):\n",
+    "    for v in range(1,arr.shape[1]+1):\n",
+    "        output_arr[r,v-1] = np.count_nonzero(arr[r,:] == v)\n",
+    "print(output_arr)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -108,6 +330,38 @@
     "#>        [ 0.,  1.,  0.],\n",
     "#>        [ 1.,  0.,  0.]])\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 1. 0.]\n",
+      " [0. 0. 1.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [1. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(101) \n",
+    "arr = np.random.randint(1,4, size=6)\n",
+    "\n",
+    "values = set(arr)\n",
+    "output_arr = np.zeros((arr.shape[0],len(values)))\n",
+    "\n",
+    "for i in range(len(arr)):\n",
+    "    for v in range(len(values)):\n",
+    "        if v+1 == arr[i]:\n",
+    "            output_arr[i,v] = 1\n",
+    "print(output_arr)            "
    ]
   },
   {
@@ -164,6 +418,75 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from random import uniform\n",
+    "\n",
+    "def sample(q):\n",
+    "    a = 0.0\n",
+    "    U = uniform(0, 1)\n",
+    "    for i in range(len(q)):\n",
+    "        if a < U <= a + q[i]:\n",
+    "            return i\n",
+    "        a = a + q[i]\n",
+    "\n",
+    "q = np.array([0.25, 0.75])\n",
+    "sample(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from random import uniform\n",
+    "class DiscreteRV():\n",
+    "    def __init__(self,q):\n",
+    "        self.q = q\n",
+    "    \n",
+    "    def draw(self,k):\n",
+    "        U = uniform(0,1)\n",
+    "        k = np.cumsum(self.q.searchsorted(U))\n",
+    "        return k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1], dtype=int64)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "example = DiscreteRV(np.array([0.25, 0.75]))\n",
+    "example.draw(np.random.randint)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -188,24 +511,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#stretch"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1, 3, 7, 1, 2, 6, 0, 1])\n",
+    "res = []\n",
+    "\n",
+    "# use search sort\n",
+    "# find index\n",
+    "for i in range(len(a)-1):\n",
+    "    if a[i+1] > a[i] < a[i-1]:\n",
+    "        res.append(a[i-1])\n",
+    "print(res)"
+   ]
   },
   {
    "cell_type": "code",
@@ -233,7 +569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4-final"
+   "version": "3.8.3"
   },
   "next_doc": {
    "link": "matplotlib",
@@ -246,5 +582,5 @@
   "title": "NumPy"
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
