--- a/Workshop.ipynb
+++ b/Workshop.ipynb
@@ -406,11 +406,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "from random import uniform\n",
+    "import numpy as np\n",
     "\n",
     "class DiscreteRV():\n",
     "    def __init__(self, q=[1]):\n",
@@ -420,27 +421,27 @@
     "\n",
     "    def draw(self, k=1):\n",
     "        # I know... avoid loops\n",
-    "        return [np.searchsorted(self.q, uniform(0, 1)) for _ in range(k)]"
+    "        return [np.searchsorted(np.cumsum(self.q), uniform(0, 1)) for _ in range(k)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[1, 1, 0, 2, 1, 1, 0, 1, 1, 1]"
+       "[2, 2, 2, 2, 1, 0, 0, 0, 2, 0]"
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 11
     }
    ],
    "source": [
-    "drv = DiscreteRV([0.25, 0.75])\n",
+    "drv = DiscreteRV([0.2, 0.25, 0.55])\n",
     "drv.draw(10)"
    ]
   },
